--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -1,29 +1,26 @@
 {% extends '_layouts/base.njk' %}
 
-{% block page_title %}New index page title{% endblock %}
+{% block page_title %}Pirate website for sailors{% endblock %}
 
 {% block content %}
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col">
+    <div class="col-sm-6 offset-sm-3">
     <h1>Main headline</h1>
-    <p class="author">By Obi-Wan Kenobi</p>
     <p class="date"> Published May 25, 1977</p>
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-sm-6 offset-sm-3">
       <p>
         Lucas ipsum dolor <a href="detail-book-example.html">link to book page example</a> amidala sith dooku solo moff organa obi-wan windu. Gamorrean binks wedge darth. Mon darth mon kit ponda solo. Moff watto ackbar mothma moff anakin. Lando skywalker lars fett calrissian lars organa. Organa kenobi wedge darth jawa skywalker anakin. Twi'lek kit darth calamari lando kamino droid. Darth jawa fett grievous maul. Palpatine obi-wan leia tusken raider dagobah. Twi'lek qui-gon boba antilles yoda thrawn. Wampa luuke wampa skywalker. Moff ponda ackbar dagobah kit lobot jinn solo.
       </p>
-      <ul> 
-        {% for book in data.books %}
-          <li>{{ book.title }}, {{ book.author }}</li>
-        {% else %}
-          <li>This would display if the 'books' collection were empty</li>
-        {% endfor %}
-     </ul>
+      {% for entry in data.entries %}
+        <h3 class="entry-headline"><a href="{{ entry.url }}">{{ entry.title }}</a></h3>
+        <p class="entry-date">{{ entry.date }}</p>
+        <hr>
+      {% endfor %}
     </div>
   </div>
 </div>
