--- a/src/njk/index.njk
+++ b/src/njk/index.njk
@@ -7,14 +7,14 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-6 offset-sm-3">
-    <h1>Main headline</h1>
+    <h1>The Diary of Captain Crit McGillicutty</h1>
     <p class="date"> Published May 25, 1977</p>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-6 offset-sm-3">
       <p>
-        Lucas ipsum dolor <a href="detail-book-example.html">link to book page example</a> amidala sith dooku solo moff organa obi-wan windu. Gamorrean binks wedge darth. Mon darth mon kit ponda solo. Moff watto ackbar mothma moff anakin. Lando skywalker lars fett calrissian lars organa. Organa kenobi wedge darth jawa skywalker anakin. Twi'lek kit darth calamari lando kamino droid. Darth jawa fett grievous maul. Palpatine obi-wan leia tusken raider dagobah. Twi'lek qui-gon boba antilles yoda thrawn. Wampa luuke wampa skywalker. Moff ponda ackbar dagobah kit lobot jinn solo.
+        Check out the Ship's Log pages for an inside look at the life of the ship's captain, Crit McGillicutty. From violent storms to unruly krakens, you'll never know what's in store for McGillicutty!
       </p>
       {% for entry in data.entries %}
         <h3 class="entry-headline"><a href="{{ entry.url }}">{{ entry.title }}</a></h3>
